--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,9 +54,9 @@ set -s escape-time 0
 # client connected to *that window*. Much more reasonable.
 setw -g aggressive-resize on
 
-# Allows us to use C-a a <command> to send commands to a TMUX session inside 
+# Allows us to use C-a q <command> to send commands to a TMUX session inside 
 # another TMUX session
-bind-key a send-prefix
+bind-key q send-prefix
 
 # Activity monitoring
 setw -g monitor-activity on
